--- a/Resources/config/configuration.yml
+++ b/Resources/config/configuration.yml
@@ -1,6 +1,7 @@
 parameters:
     team3_pay_u.configuration.class: Team3\PayU\Configuration\Configuration
     team3_pay_u.configuration.credentials.class: Team3\PayU\Configuration\Credentials\Credentials
+    team3_pay_u.logger_adapter.class: Team3\Bundle\PayUBundle\Service\LoggerAdapter\LoggerAdapter
 
 services:
     team3_pay_u.configuration.credentials.signature_algorithm:
